# Project-6-AI-Video-Intelligence-Content-Moderation-Platform

./: .gitattributes  .gitignore  AWS-deployment-guide.md  CLAUDE.md  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml  git-branching-guide.md  git_fork_guide.md  task.md
backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_add_user_name.py  0003_add_source_url.py  0004_user_profile_and_access_control.py  0005_access_audit_log.py
backend/app/: config.py  dependencies.py  main.py
backend/app/ai/: __init__.py  base.py  schemas.py  state.py
backend/app/api/: deps.py
backend/app/core/: exceptions.py  logging.py  middleware.py  security.py
backend/app/models/: __init__.py  alert.py  analytics.py  base.py  moderation.py  policy.py  user.py  video.py  webhook.py
backend/app/schemas/: __init__.py  analytics.py  audit.py  auth.py  live.py  moderation.py  policy.py  user.py  video.py  webhook.py
backend/app/services/: __init__.py  analytics_service.py  auth_service.py  moderation_service.py  notification_service.py  storage_service.py  stream_service.py  video_service.py
backend/app/workers/: __init__.py  analytics_tasks.py  celery_app.py  cleanup_tasks.py  moderation_tasks.py  video_tasks.py
backend/scripts/: seed_admin.py
backend/tests/: conftest.py
backend/tests/test_ai/: test_audio_transcriber.py  test_content_analyzer.py  test_frame_extractor.py  test_insight_chain.py  test_metadata_extractor.py  test_moderation_chain.py  test_moderation_workflow.py  test_object_detector.py  test_ocr_tool.py  test_pipeline.py  test_report_generator.py  test_safety_checker.py  test_scene_classifier.py  test_schemas.py  test_similarity_search.py  test_summary_chain.py  test_summary_prompts.py
backend/tests/test_api/: test_analytics.py  test_auth.py  test_live.py  test_moderation.py  test_policies.py  test_videos.py  test_webhooks.py
backend/tests/test_core/: test_exceptions.py  test_logging.py  test_middleware.py  test_security.py
backend/tests/test_models/: test_alert_model.py  test_analytics_model.py  test_migration.py  (+5 more)
(+230 files in other folders)
